update: update information

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -3,7 +3,7 @@
 @import './layouts/header';
 @import './layouts/hero';
 @import './layouts/about';
-@import './layouts/advantages';
+@import './layouts/information';
 @import './layouts/contacts';
 @import './layouts/customer-reviews';
 @import './layouts/gallery';
